--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,13 @@
   width: fit-content;
 }
 
+.invest-label {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-color: red;
+}
+
 .invest-button {
   position: absolute;
   bottom: 20px;
